src/parser/snapshots/texlab__parser__latex__tests__parse@generic_command_escape.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/generic_command_escape.txt
---
ROOT@0..2
  PREAMBLE@0..2
    GENERIC_COMMAND@0..2
      GENERIC_COMMAND_NAME@0..2 "\\#"

