src/parser/snapshots/texlab__parser__latex__tests__parse@graphics_include_command.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/include/graphics_include_command.txt
---
ROOT@0..52
  PREAMBLE@0..52
    GRAPHICS_INCLUDE@0..52
      GRAPHICS_INCLUDE_NAME@0..16 "\\includegraphics"
      BRACK_GROUP_KEY_VALUE@16..37
        L_BRACK@16..17 "["
        KEY_VALUE_BODY@17..36
          KEY_VALUE_PAIR@17..36
            KEY@17..22
              WORD@17..22 "width"
            EQUALITY_SIGN@22..23 "="
            VALUE@23..36
              TEXT@23..26
                WORD@23..26 "0.5"
              GENERIC_COMMAND@26..36
                GENERIC_COMMAND_NAME@26..36 "\\textwidth"
        R_BRACK@36..37 "]"
      CURLY_GROUP_WORD_LIST@37..52
        L_CURLY@37..38 "{"
        KEY@38..51
          GENERIC_COMMAND_NAME@38..42 "\\foo"
          WORD@42..43 "."
          GENERIC_COMMAND_NAME@43..47 "\\bar"
          WORD@47..51 ".pdf"
        R_CURLY@51..52 "}"

